fixed sidebar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -618,11 +618,7 @@ img {
     margin-right: 8px;
     margin-bottom: 1px;
   }
-
-  #dropdowns {
-    display: none;
-  }
-
+  
   .dropdown-menu {
     margin-top: 0;
   }
